--- a/TwitchAppCSS.css
+++ b/TwitchAppCSS.css
@@ -1,6 +1,3 @@
-h1 {
-  color: #59448a;
-}
 
 .menu{
     background-color: white;
@@ -20,4 +17,14 @@ h1 {
 
 .FA_Icon {
   color: #59448a
+}
+
+@font-face {
+  font-family: Twitch; src: url("twitch.otf");
+}
+
+h1 {
+  color: #59448a;
+  font-family: Twitch, Georgia, serif;
+  text-shadow: 0px 0px #59448a;
 }
