--- a/TwitchAppCSS.css
+++ b/TwitchAppCSS.css
@@ -1,5 +1,23 @@
 
-.menu{
+
+.logo{
+    background-color: white;
+    border-radius: 30px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    opacity: 0.9;
+}
+
+.logo:hover{
+    background-color: #17141f;
+    opacity: 0.9;
+     -webkit-transition: background-color 0.5s ease-in;
+     -moz-transition: background-color 0.5s ease-in;
+     -o-transition: background-color 0.5s ease-in;
+}
+
+
+.social{
     background-color: white;
     border-radius: 30px;
     padding-top: 1%;
@@ -7,7 +25,7 @@
     opacity: 0.6;
 }
 
-.menu:hover{
+.social:hover{
     background-color: #17141f;
     opacity: 0.9;
      -webkit-transition: background-color 0.5s ease-in;
@@ -25,6 +43,8 @@
 
 h1 {
   color: #59448a;
-  font-family: Twitch, Georgia, serif;
-  text-shadow: 0px 0px #59448a;
+  font-family: Twitch, Arial, sans-serif;
+  /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+  text-shadow: 2px 0px #59448a;
+  font-size: 3.5em
 }
